# FastApi

./: .gitignore  PostgreSQLScript.sql  README.md  books.py  books2.py  main.py  pyproject.toml  user_data.json
3TODOAPP/: PostgreSQLScript.sql  alembic.ini  database.py  main.py  main_wor.py  models.py
3TODOAPP/Routers/: admin.py  auth.py  todos.py  todos_wor.py
3TODOAPP/alembic/versions/: 2699c1ecc739_create_phone_number_column_in_users_.py  5d8db43ffc53_create_phone_number_for_user_column.py
Project_1/: books.py
Project_2/: books2.py
